--- a/styles.css
+++ b/styles.css
@@ -8,21 +8,49 @@ h1 {
   text-align: center;
 }
 
+hr {
+  border: 1px solid black;
+}
+
+input[type="button"],
 button {
+  font-weight: 500;
+  border: 1px solid black;
+  color: #fff;
   margin: 4px;
+  padding: 1px 10px;
+  background-color: royalblue;
+  border-radius: 15px;
+}
+
+input[type="text"] {
+  background-color: lightgray;
+  border: 1.5px solid black;
+  font-size: 1.1em;
+  padding: 1px 2px;
+  width: 90%;
+}
+
+.app {
+  background-color: #ffde22;
 }
 
 .card {
   width: 225px;
-  border: 1px solid black;
   margin: 5px;
   padding: 5px;
+  background-color: #ffcf54;
+  border: 2.5px solid black;
+  border-radius: 10px;
 }
 
 .prompt {
   text-indent: 2em;
+  font-weight: 500;
   height: 7.2em;
   padding: 0.5em 0;
+  display: flex;
+  align-items: center;
 }
 
 .clue,
@@ -32,10 +60,13 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  /*  background-color: #f59376; */
+  background-color: coral;
+  border-radius: 5px;
 }
 
 .clue-prompt {
-  border: 1px solid black;
+  border: 1.5px solid black;
 }
 
 form {
